--- a/nginx/pod.yaml
+++ b/nginx/pod.yaml
@@ -10,3 +10,9 @@ spec:
     name: nginx
   dnsPolicy: ClusterFirst
   restartPolicy: Never
+  livenessProbe:
+    httpGet:
+      path: /
+      port: 80
+    initialDelaySeconds: 15
+    timeoutSeconds: 1
